hols/todo/infra/multi-cluster/resources/wka.template.yaml
# Copyright (c) 2025 Oracle and/or its affiliates.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: todo-wka
  annotations:
    service.cilium.io/global: "true"
  namespace: todo
  labels:
    coherenceCluster: todo
    coherenceComponent: coherenceWkaService
    coherenceDeployment: storage
    coherenceRole: storage
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: tcp-coherence
      port: 7
      protocol: TCP
      targetPort: 7
    - name: coh-local
      port: 7575
      protocol: TCP
      targetPort: 7575
    - name: coh-cluster
      port: 7574
      protocol: TCP
      targetPort: 7574
    - name: health
      port: 6676
      protocol: TCP
      targetPort: 6676
  publishNotReadyAddresses: true
  selector:
    coherenceCluster: todo
    coherenceComponent: coherencePod
    coherenceWKAMember: "true"
